Fixed colour and alignment

--- a/robotmoderationcss.css
+++ b/robotmoderationcss.css
@@ -6,3 +6,7 @@
 	text-align: center;
 	color: rgb(255,0,0);
 }
+h3{
+	text-align: right;
+	color: rgb(255,0,0);
+}
